# valis-core

./: .build.yml  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.yml
docs/: crates.js  help.html  search-index.js  settings.html  source-files.js
docs/doc/implementors/core/default/: trait.Default.js
docs/doc/implementors/core/marker/: trait.Send.js  trait.Sync.js
docs/doc/src/valis_core/: lib.rs.html
docs/doc/src/valis_core/modules/: log.rs.html  (+1 more)
docs/doc/valis_core/: all.html  sidebar-items.js
docs/doc/valis_core/modules/: index.html  sidebar-items.js
docs/implementors/core/default/: trait.Default.js
docs/implementors/core/fmt/: trait.Debug.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/src/valis_core/: lib.rs.html
docs/src/valis_core/modules/: core.rs.html  log.rs.html  mod.rs.html
docs/valis_core/: all.html  index.html
docs/valis_core/modules/: index.html
docs/valis_core/modules/core/: fn.get_files.html  fn.get_os.html  fn.in_path.html  fn.run.html  fn.run_buffered.html  index.html  sidebar-items.js
docs/valis_core/modules/k8s/: index.html
docs/valis_core/modules/log/: fn.ack.html  index.html  sidebar-items.js
docs/valis_core/modules/projects/: index.html  sidebar-items.js
docs/valis_core/modules/script/: index.html  sidebar-items.js
docs/valis_core/modules/software/: index.html
src/: main.rs
src/modules/: core.rs  log.rs  mod.rs
src/modules/admin/: mod.rs  secrets.rs
src/modules/db/: mod.rs  serializers.rs  tables.sql
src/modules/formats/: mod.rs  yaml.rs
src/modules/k8s/: kind.rs
src/modules/notes/: humble.rs  markdown.rs
src/modules/projects/: agile.rs  git.rs  mod.rs  venv.rs
src/modules/projects/agile/: core.rs  lua.rs
src/modules/projects/git/: core.rs  github.rs  lua.rs
src/modules/script/: engine.rs  mod.rs  prelude.lua  repl.rs
src/modules/software/: definitions.rs  doctor.rs  mod.rs
src/modules/tasks/: todoist.rs
src/modules/tasks/todoist/: core.rs  lua.rs
valis_core/: Cargo.toml
valis_core/src/: main.rs
valis_core/src/modules/: core.rs  log.rs  mod.rs
valis_core/src/modules/admin/: authinfo.rs  secrets.rs
valis_core/src/modules/db/: mod.rs  serializers.rs  tables.sql
valis_core/src/modules/formats/: text.rs  yaml.rs
valis_core/src/modules/k8s/: kind.rs
valis_core/src/modules/notes/: humble.rs  markdown.rs  mod.rs
valis_core/src/modules/projects/: venv.rs
valis_core/src/modules/script/: engine.rs  mod.rs  repl.rs
valis_core/src/modules/software/: definitions.rs  doctor.rs
valis_core/src/modules/tasks/: mod.rs
valis_core/tests/: rebuild_tests.rs
valis_core_python/: Cargo.toml  README.md
valis_core_python/src/: lib.rs
(+68 files in other folders)
