[package]
name = "valis-core"
version = "0.1.7"
edition = "2021"
exclude = [
    ".idea/*"
]
license-file = "LICENSE"
description = "A library for workflow management"
homepage = "https://github.com/ruivieira/valis-core"
repository = "https://github.com/ruivieira/valis-core"
readme = "README.md"

[dependencies]
globmatch = "0.2.3"
git2 = "0.17.1"
home = "0.5.4"
lazy_static = "1.4.0"
rlua = { version = "0.19.4", features = ["builtin-lua54"] }
colored = "2"
